--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   },
   "dependencies": {
     "express": "3.2.0",
+    "express-validator": "*",
+    "connect-flash": "*",
+    "passport": "*",
+    "passport-local": "*",
+    "i18n": "*",
+    "sequelize": "*",
+    "sequelize-sqlite": "*",
     "jade": "*",
     "stylus": "*"
   }
