Adding Form Objects

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "passport": "*",
     "passport-local": "*",
     "i18n": "*",
+    "forms": "*",
     "sequelize": "*",
     "sequelize-sqlite": "*",
     "jade": "*",
