--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "scripts": {
     "start": "node app.js"
   },
+  "scripts": {
+    "start": "node app",
+    "test": "make test"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "zombie": "*"
+  },
   "dependencies": {
     "express": "3.2.0",
     "express-validator": "*",
